# sm-profiler

./: .gitignore  Makefile  README.md  sm_profiler.cu  sm_profiler.h  sm_profiler_demo.cu
cuda/: Makefile  sm_profiler.cu  sm_profiler.h  sm_profiler_demo.cu
python/: README.md  demo.py  pyproject.toml
python/sm_profiler/: __init__.py  profiler.py  triton_ops.py
